--- a/meteor/client/ui/SegmentTimeline/SegmentTimeline.scss
+++ b/meteor/client/ui/SegmentTimeline/SegmentTimeline.scss
@@ -26,13 +26,15 @@ $timeline-layer-height: 1em;
 	border-radius: 3px;
 }
 .segment-timeline__part-identifiers {
-	display: flex;
 	position: absolute;
 	bottom: 2.5px;
-	flex-wrap: wrap;
+	left: 0;
+	right: 0;
+	top: auto;
+	text-align: left;
 
 	.segment-timeline__part-identifiers__identifier {
-		float: left;
+		display: inline-block;
 		margin: 2.5px;
 		padding: 0 10px 0 10px;
 		box-sizing: border-box;
